Fixed text input cut off in firefox browser.

--- a/reports.css
+++ b/reports.css
@@ -17,7 +17,7 @@
 }
 #report-table #search-fields-container .volunteer-name{
 	width: 266px;
-	height: 20px;
+	height: 30px;
 	padding: 4px 6px;
 	margin-bottom: 5px;
 	font-size: 14px;
